--- a/frontend/src/componants/bookdetails/bookdetails.css
+++ b/frontend/src/componants/bookdetails/bookdetails.css
@@ -130,3 +130,17 @@
     background-color: #0056b3;
   }
   
+  .loading-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* Full height for loading screen */
+  }
+  
+  .loading-container p {
+    margin-top: 20px;
+    font-size: 18px;
+    color: #007bff; /* Same color as the spinner */
+  }
+  
